@@ -6,7 +6,7 @@ General
 
 * The "dicom-as-json" attachments are not explicitly stored anymore to improve performance
 * If the storage area doesn't support range reading, or if "StorageCompression"
-  is enabled, a new type of attachment "dicom-until-pixel-data" is generated.
+  is enabled, a new type of attachment "dicom-until-pixel-data" is generated
 * New metadata automatically computed at the instance level: "PixelDataOffset"
 * New configuration option related to networking:
   - "Timeout" in "DicomModalities" to set DICOM SCU timeout on a per-modality basis
@@ -17,7 +17,8 @@ REST API
 
 * API version upgraded to 11
 * BREAKING CHANGES:
-  - External applications should *not* call "/instances/.../attachments/dicom-as-json" anymore
+  - External applications should not call "/instances/.../attachments/dicom-as-json" anymore,
+    and should use "/instances/.../tags" instead
   - "/instances/.../tags" route does not report the tags after "Pixel Data" (7fe0,0010) anymore
 * "/peers/{id}/store-straight": Synchronously send the DICOM instance in POST body to the peer
 * New arguments in the REST API:
@@ -37,6 +38,7 @@ Maintenance
 * Improved precision of floating-point numbers in DICOM-as-JSON and DICOM summary
 * Optimization in C-STORE SCP by avoiding an unnecessary DICOM parsing
 * Fix build on big-endian architectures
+* Handle public tags with "UN" value representation and containing a string (cf. DICOM CP 246)
 * The numbering of sequences in Orthanc Explorer now uses the DICOM convention (starts at 1)
 * Possibility to generate a static library containing the Orthanc Framework
 
